adding endpoints and control logic for new resourcetype: DataModel
