# api/gateway/analysis/models/mapping.go
@@ -1,0 +1,112 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// Mapping mapping
+//
+// swagger:model Mapping
+type Mapping struct {
+
+	// field
+	Field Field `json:"field,omitempty"`
+
+	// method
+	Method Method `json:"method,omitempty"`
+
+	// name
+	// Required: true
+	Name SourceName `json:"name"`
+}
+
+// Validate validates this mapping
+func (m *Mapping) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateField(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateMethod(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateName(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *Mapping) validateField(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.Field) { // not required
+		return nil
+	}
+
+	if err := m.Field.Validate(formats); err != nil {
+		if ve, ok := err.(*errors.Validation); ok {
+			return ve.ValidateName("field")
+		}
+		return err
+	}
+
+	return nil
+}
+
+func (m *Mapping) validateMethod(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.Method) { // not required
+		return nil
+	}
+
+	if err := m.Method.Validate(formats); err != nil {
+		if ve, ok := err.(*errors.Validation); ok {
+			return ve.ValidateName("method")
+		}
+		return err
+	}
+
+	return nil
+}
+
+func (m *Mapping) validateName(formats strfmt.Registry) error {
+
+	if err := m.Name.Validate(formats); err != nil {
+		if ve, ok := err.(*errors.Validation); ok {
+			return ve.ValidateName("name")
+		}
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Mapping) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Mapping) UnmarshalBinary(b []byte) error {
+	var res Mapping
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
