# internal/core/analysis_api/handlers/util.go
@@ -44,8 +44,8 @@ const (
 
 var (
 	// Custom errors make it easy for callers to identify which error was triggered
-	errNotExists = errors.New("policy/rule does not exist")
-	errExists    = errors.New("policy/rule already exists")
+	errNotExists = errors.New("analysis type instance does not exist")
+	errExists    = errors.New("analysis type instance already exists")
 	errWrongType = errors.New("trying to replace a rule with a policy (or vice versa)")
 )
 
@@ -165,7 +165,7 @@ func policiesEqual(first, second *tableItem) (bool, error) {
 	return reflect.DeepEqual(p1, p2), nil
 }
 
-// Create/update a policy or rule.
+// Create/update a policy, rule, global, or data model
 //
 // The following fields are set automatically (need not be set by the caller):
 //     CreatedAt, CreatedBy, LastModified, LastModifiedBy, VersionID
@@ -232,7 +232,7 @@ func writeItem(item *tableItem, userID models.UserID, mustExist *bool) (int, err
 		return changeType, err
 	}
 
-	if item.Type == typeRule {
+	if item.Type == typeRule || item.Type == typeDataModel {
 		return changeType, nil
 	}
 
@@ -270,7 +270,8 @@ func itemUpdated(oldItem, newItem *tableItem) bool {
 		setEquality(oldItem.ResourceTypes, newItem.ResourceTypes) &&
 		setEquality(oldItem.Suppressions, newItem.Suppressions) && setEquality(oldItem.Tags, newItem.Tags) &&
 		len(oldItem.AutoRemediationParameters) == len(newItem.AutoRemediationParameters) &&
-		len(oldItem.Tests) == len(newItem.Tests)
+		len(oldItem.Tests) == len(newItem.Tests) &&
+		len(oldItem.Mappings) == len(newItem.Mappings)
 
 	if !itemsEqual {
 		return true
@@ -318,6 +319,21 @@ func itemUpdated(oldItem, newItem *tableItem) bool {
 		}
 
 		if !reflect.DeepEqual(oldResource, newResource) {
+			return true
+		}
+	}
+
+	// Check mappings for equality
+	oldMappings := make(map[models.SourceName]*models.Mapping)
+	for _, mapping := range oldItem.Mappings {
+		oldMappings[mapping.Name] = mapping
+	}
+	for _, newMapping := range newItem.Mappings {
+		oldMapping, ok := oldMappings[newMapping.Name]
+		if !ok ||
+			oldMapping.Name != newMapping.Name ||
+			oldMapping.Field != newMapping.Field ||
+			oldMapping.Method != newMapping.Method {
 			return true
 		}
 	}
